KinD/TraefiKind3/temp/httpbin-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: mccutchen/go-httpbin
          resources:
            limits:
              cpu: "500m"
              memory: "64Mi"
            requests:
              cpu: "250m"
              memory: "32Mi"
          ports:
            - name: web
              containerPort: 8080
