KinD/TraefiKind3/temp/httpbin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: httpbin
