KinD/TraefiKind3/temp/httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: mccutchen/go-httpbin
          resources:
            limits:
              cpu: "500m"
              memory: "64Mi"
            requests:
              cpu: "250m"
              memory: "32Mi"
          ports:
            - name: web
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: httpbin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: httpbin
  annotations:
    # kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: 0a0f122c.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  name: web
